--- a/custom/lovelace/floorplan.yaml
+++ b/custom/lovelace/floorplan.yaml
@@ -1,13 +1,8 @@
-# decluttering_templates: !include decluttering_templates.yaml
-      
+honeycomb_menu_templates: !include honeycomb_templates.yaml
+
+
+       
 title: Floorplan
 views:
-  - !include downstairs.yaml
-  - theme: Backend-selected
-    title: Upstairs
-    path: upstairs 
-    # icon: mdi:arrow-up-bold-hexagon-outline
-    type: panel
-    badges: []
-    cards:  []
-                 
+  - !include floors.yaml
+
