--- a/custom/packages/sonos.yaml
+++ b/custom/packages/sonos.yaml
@@ -5,3 +5,8 @@ media_player:
     entities:
       - media_player.conservatory
       - media_player.kitchen
+  - platform: group
+    name: Living Room
+    unique_id: living_room_speaker_group
+    entities:
+      - media_player.living_room
