--- a/custom/lovelace/floors/computers.yaml
+++ b/custom/lovelace/floors/computers.yaml
@@ -1,8 +1,17 @@
 # Computers **************************************
 
 - entities:
-  - binary_sensor.rogers_imac_active
   - device_tracker.ben_pc
+  tap_action: more-info
+  state_action:
+    action: call-service
+    service: floorplan.class_set
+    service_data: 'computer computer-${entity.state}' 
+    
+- entity: binary_sensor.rogers_imac_active
+  elements:
+  - binary_sensor.rogers_imac_active
+  - binary_sensor.rogers_imac_active2
   tap_action: more-info
   state_action:
     action: call-service
