--- a/custom/packages/default_config/zones.yaml
+++ b/custom/packages/default_config/zones.yaml
@@ -1,33 +1,33 @@
-weather:
-  - platform: darksky
-    name: Home
-    api_key: !secret darksky_key
-    # units: uk2
-    mode: daily
-    scan_interval: 20
-    latitude: !secret home_latitude
-    longitude: !secret home_longitude
+# weather:
+#   - platform: darksky
+#     name: Home
+#     api_key: !secret darksky_key
+#     # units: uk2
+#     mode: daily
+#     scan_interval: 20
+#     latitude: !secret home_latitude
+#     longitude: !secret home_longitude
 
-  - platform: darksky
-    name: Ty'r Celyn
-    api_key: !secret darksky_key
- #  units: auto
-    mode: daily
-    scan_interval: 60
-    latitude: !secret tc_latitude
-    longitude: !secret tc_longitude
+#   - platform: darksky
+#     name: Ty'r Celyn
+#     api_key: !secret darksky_key
+#  #  units: auto
+#     mode: daily
+#     scan_interval: 60
+#     latitude: !secret tc_latitude
+#     longitude: !secret tc_longitude
     
-# Example configuration.yaml entry
-sensor:
-  - platform: darksky
-    api_key: !secret darksky_key
-    forecast:
-      - 0
-    hourly_forecast:
-      - 0
-      - 1
-    monitored_conditions:
-      - cloud_cover
+# # Example configuration.yaml entry
+# sensor:
+#   - platform: darksky
+#     api_key: !secret darksky_key
+#     forecast:
+#       - 0
+#     hourly_forecast:
+#       - 0
+#       - 1
+#     monitored_conditions:
+#       - cloud_cover
 
 zone:
   - name: Home
