--- a/custom/packages/ios.yaml
+++ b/custom/packages/ios.yaml
@@ -24,14 +24,14 @@ ios:
     icon:
       icon: food-turkey
       color: "#f6f5f3"
-#  - name: normal
-#    background_color: "#f3c87a"
-#    label:
-#      text: "Normal"
-#      color: "#ff0000"
-#    icon:
-#      icon: sofa
-#      color: "#f6f5f3"
+  - name: normal
+    background_color: "#f3c87a"
+    label:
+     text: "Normal"
+     color: "#ff0000"
+    icon:
+     icon: sofa
+     color: "#f6f5f3"
   - name: flash_benjamin
     background_color: "#ff0338"
     label:
@@ -39,4 +39,12 @@ ios:
       color: "#f6f5f3"
     icon:
       icon: flash-circle
+      color: "#f6f5f3"
+  - name: plex
+    background_color: "#f1b55d"
+    label:
+      text: "Plex"
+      color: "#ff0000"
+    icon:
+      icon: plex
       color: "#f6f5f3"
