--- a/custom/lovelace/general/warnings.yaml
+++ b/custom/lovelace/general/warnings.yaml
@@ -6,9 +6,15 @@
       style: |
         :host {
           position: absolute;
-          bottom: 2px;
+          bottom: 6px;
           right: 6px;
           width: 265px;
+        }
+        @media only screen and (max-width: 1194px)
+        {
+            :host {
+                bottom: 26px;
+            }
         }
         @media only screen and (max-width: 428px)
         {
