--- a/custom/packages/default_config/logger.yaml
+++ b/custom/packages/default_config/logger.yaml
@@ -3,6 +3,8 @@ logger:
   logs:
 #  custom_components.braviatv_psk: debug
     NodeRed: info
+    custom_components.homelink: debug
+    custom_components.homelink.helpers.coordinator: info
     custom_components.skyq: info
     pyskyqremote: info
     # custom_components.o365: debug
