--- a/custom/packages/nest.yaml
+++ b/custom/packages/nest.yaml
@@ -74,6 +74,20 @@ template:
         unit_of_measurement: °C
         state: >-
           {{ state_attr('climate.tyr_celyn', 'temperature')}}
+  - sensor:
+      - name: nest_current_temperature_hoobs
+        unique_id: nest_current_temperature_hoobs
+        device_class: temperature
+        unit_of_measurement: °C
+        state: >-
+          {{ state_attr('climate.tyr_celyn_thermostat', 'current_temperature')}}
+  - sensor:
+      - name: nest_set_temperature_hoobs
+        unique_id: nest_set_temperature_hoobs
+        device_class: temperature
+        unit_of_measurement: °C
+        state: >-
+          {{ state_attr('climate.tyr_celyn_thermostat', 'temperature')}}
 
 timer:
   heating:
